tests/sema/fail/v9_fail_str_compound_subscript.ep
# COMPILE_FAIL_CONTAINS: str is read-only; compound subscript assignment is not allowed
fun main(): void {
    let s = "Epic"
    s[0] += u8(1)
}
